--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link Fonts -->
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- Link Icon -->
+    <link rel="stylesheet" href="./assets/Fonts/style.css" />
 
     <!-- Link Css -->
     <link rel="stylesheet" href="style.css">
@@ -18,20 +25,44 @@
 </head>
 <body>
 
-    <!-- Cabecalho -->
-    <nav>
+    <div class="container"> 
+        <!-- Cabecalho -->
+        <nav>
+            <img src="./assets/imgs/Logo.svg" alt="Logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Treinar</a></li>
+            </ul>
+        </nav>
 
-    </nav>
+        <!-- Conteudo Principal -->
+        <main>
+            <section id="Texts">
+                <h1>
+                    Treinos exclusivos para você!
+                </h1>
 
-    <!-- Conteudo Principal -->
-    <main>
+                <p>
+                    Nós criamos treinos exclusivos e únicos para você. <br>
+                    Invista no seu corpo e tenha muito mais performance e qualidade de vida.
+                </p>
 
-    </main>
+                <button>
+                    <i class="icon-whatsapp"></i>COMECE JÁ
+                </button>
+            </section>
 
-    <!-- Rodape -->
-    <footer>
+            <img src="./assets/imgs/Main_img.png" alt="Imagen Principal">
+        </main>
 
-    </footer>
+        <!-- Rodape -->
+        <footer>
+        <p>
+            fale concosco no instagram <a href="">@treine.me</a>
+        </p>
+        </footer>
+    </div>
 
 </body>
 </html>
