--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
         <!-- Conteudo Principal -->
         <main>
-            <section id="Texts">
+            <section id="texts">
                 <h1>
-                    Treinos exclusivos para você!
+                    Treinos <span>exclusivos</span> para você!
                 </h1>
 
                 <p>
-                    Nós criamos treinos exclusivos e únicos para você. <br>
-                    Invista no seu corpo e tenha muito mais performance e qualidade de vida.
+                    Nós criamos treinos <strong>exclusivos e únicos para você</strong>. <br>
+                    Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.
                 </p>
 
                 <button>
