--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
         </footer>
     </div>
 
+    <img id="balls" src="./assets/imgs/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página." srcset="">
 </body>
 </html>
