--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <div class="container"> 
         <!-- Cabecalho -->
         <nav>
-            <img src="./assets/imgs/Logo.svg" alt="Logo">
+            <a href="">
+                <img src="./assets/imgs/Logo.svg" alt="Logo">                
+            </a>
+            
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Sobre</a></li>
